refactored google authing

--- a/app/index.html
+++ b/app/index.html
@@ -36,14 +36,18 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
+
+        <script src="scripts/main.js"></script>
+
+        <!-- Models -->
+        <script src="scripts/model/user.js"></script>
+
         <!-- Firebase -->
         <script src="scripts/module/firebase/ref-service.js"></script>
 
         <!-- Auth -->
         <script src="scripts/module/auth/auth.js"></script>
         <script src="scripts/module/auth/drctv/login/google-login.js"></script>
-
-        <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
