--- a/app/scripts/module/auth/drctv/login/google-tmpl.html
+++ b/app/scripts/module/auth/drctv/login/google-tmpl.html
@@ -1,5 +1,5 @@
 <form name="loginForm" class="loginForm" ng-submit="login.submit()" ng-if="!user.id">
-    <button></button>
+    <button class="image"></button>
 </form>
 
 <form name="logoutForm" class="logoutForm" ng-submit="login.logout()" ng-if="user.id">
@@ -7,7 +7,7 @@
 </form>
 
 
-{{user}}
+<!-- {{user}} -->
 <style>
     google-login form {
         margin: 10px 10px 0px 0px;
