user list respects logging in users

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,11 @@
         <div class="container">
             <h3>Guessing Game</h3>
             <google-login></google-login>
+
+            <ul>
+                <li ng-repeat="u in users">
+                    {{u}}
+                </li>
         </div>
 <!-- 
         <script src="bower_components/jquery/dist/jquery.js"></script>
