--- a/app/scripts/module/guess-game/drctv/chat/tmpl.html
+++ b/app/scripts/module/guess-game/drctv/chat/tmpl.html
@@ -1,4 +1,6 @@
 <div class="message-area">
     
 </div>
-<input type="text" name="message" placeholder="{{ ( gameStarted ) ? 'Enter Your Guess!' : 'Chat Message' ">
+{{ userName }} <input type="text" name="message" placeholder="Your Message">
+
+<!-- {{ ( gameStarted ) ? 'Enter Your Guess!' : 'Chat Message'  }} -->
