basic chat and some object cleanup

--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
         <div class="container">
             <h3>Guessing Game</h3>
             <google-login></google-login>
-            <user-list></user-list>
-            <chat></chat>
+            <chat class="col-sm-8"></chat>
+            <user-list class="col-sm-4"></user-list>
         </div>
 <!-- 
         <script src="bower_components/jquery/dist/jquery.js"></script>
