--- a/app/scripts/routing/battlefield/tmpl.html
+++ b/app/scripts/routing/battlefield/tmpl.html
@@ -1,4 +1,3 @@
-            <history></history>
+            <!-- <history></history> -->
             <clue></clue>
-            <chat></chat>
-            <user-list></user-list>
+            <!-- <guesser></guesser> -->
