--- a/app/scripts/routing/waiting-room/tmpl.html
+++ b/app/scripts/routing/waiting-room/tmpl.html
@@ -1,7 +1,6 @@
-            <user-list></user-list>
-            <div class="instructions">
-                <p>Gather enough players</p>
-                <p>When you have everyone ready, click start!</p>
-                <button>Start</button>
-            </div>
-            <chat></chat>
+<div class="instructions">
+    <p>Gather enough players</p>
+    <p>When you have everyone ready, click start!</p>
+    <button>Start</button>
+</div>
+<chat class="col-sm-8"></chat>
