--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
         <div class="container">
             <h3>Guessing Game</h3>
             <google-login></google-login>
+            <game-control></game-control>
             <div ng-view>
                 
             </div>
@@ -58,11 +59,14 @@
         <script src="scripts/module/guess-game/guess-game.js"></script>
             <!-- Models -->
         <script src="scripts/module/guess-game/model/user-list.js"></script>
+        <script src="scripts/module/guess-game/model/game.js"></script>
             <!-- Services -->
         <script src="scripts/module/guess-game/users-online-service.js"></script>
+        <script src="scripts/module/guess-game/current-game-service.js"></script>
             <!-- Directives -->
         <script src="scripts/module/guess-game/drctv/user-list/user-list.js"></script>
         <script src="scripts/module/guess-game/drctv/chat/chat.js"></script>
+        <script src="scripts/module/guess-game/drctv/game-control/game-control.js"></script>
         <!-- Routing -->
         <script src="scripts/routing/waiting-room/route.js"></script>
         <!-- endbuild -->
