added start button

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
             <!-- Services -->
         <script src="scripts/module/guess-game/users-online-service.js"></script>
         <script src="scripts/module/guess-game/current-game-service.js"></script>
+        <script src="scripts/module/guess-game/game-listener-service.js"></script>
             <!-- Directives -->
         <script src="scripts/module/guess-game/drctv/user-list/user-list.js"></script>
         <script src="scripts/module/guess-game/drctv/chat/chat.js"></script>
