--- a/app/scripts/module/guess-game/drctv/game-control/tmpl.html
+++ b/app/scripts/module/guess-game/drctv/game-control/tmpl.html
@@ -2,5 +2,5 @@
 {{game}}
     <p>Gather enough players</p>
     <p>When you have everyone ready, click start!</p>
-    <button class="btn">Start</button>
+    <button class="btn" ng-click="control.startButton()">Start</button>
 </div>
