--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-mocks/angular-mocks.js"></script>
         <script src="bower_components/valentine/valentine.js"></script>
+        <script src="bower_components/angular-xml/angular-xml.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -60,10 +61,12 @@
             <!-- Models -->
         <script src="scripts/module/guess-game/model/user-list.js"></script>
         <script src="scripts/module/guess-game/model/game.js"></script>
+        <script src="scripts/module/guess-game/model/word.js"></script>
             <!-- Services -->
         <script src="scripts/module/guess-game/users-online-service.js"></script>
         <script src="scripts/module/guess-game/current-game-service.js"></script>
         <script src="scripts/module/guess-game/game-listener-service.js"></script>
+        <script src="scripts/module/guess-game/word-request.js"></script>
             <!-- Directives -->
         <script src="scripts/module/guess-game/drctv/user-list/user-list.js"></script>
         <script src="scripts/module/guess-game/drctv/chat/chat.js"></script>
