--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="scripts/module/guess-game/drctv/game-control/game-control.js"></script>
         <!-- Routing -->
         <script src="scripts/routing/waiting-room/route.js"></script>
+        <script src="scripts/routing/battlefield/route.js"></script>
         <!-- endbuild -->
 </body>
 </html>
