--- a/app/index.html
+++ b/app/index.html
@@ -66,11 +66,13 @@
         <script src="scripts/module/guess-game/users-online-service.js"></script>
         <script src="scripts/module/guess-game/current-game-service.js"></script>
         <script src="scripts/module/guess-game/game-listener-service.js"></script>
+        <script src="scripts/module/guess-game/round-listener-service.js"></script>
         <script src="scripts/module/guess-game/name-request.js"></script>
             <!-- Directives -->
         <script src="scripts/module/guess-game/drctv/user-list/user-list.js"></script>
         <script src="scripts/module/guess-game/drctv/chat/chat.js"></script>
         <script src="scripts/module/guess-game/drctv/game-control/game-control.js"></script>
+        <script src="scripts/module/guess-game/drctv/clue/clue.js"></script>
         <!-- Routing -->
         <script src="scripts/routing/waiting-room/route.js"></script>
         <script src="scripts/routing/battlefield/route.js"></script>
