working countdown wewp but user logout is playing up

--- a/app/scripts/module/guess-game/drctv/game-control/tmpl.html
+++ b/app/scripts/module/guess-game/drctv/game-control/tmpl.html
@@ -6,5 +6,6 @@
     <button class="btn" ng-click="control.startButton()">Start</button>
 </div>
 <div class="instructions" ng-if="game.status == 'battleField'">
+    <button class="btn btn-sm btn-default" ng-click="control.resetButton()">Cancel</button>
     <h3>You are in battle!</h3>
 </div>
