--- a/app/scripts/module/guess-game/drctv/clue/tmpl.html
+++ b/app/scripts/module/guess-game/drctv/clue/tmpl.html
@@ -1,6 +1,15 @@
+
+<h1>
+    <span ng-repeat="l in [] | range:round.word.length">
+        <span ng-if="( $first )">{{ round.clues.firstLetter }}</span>
+        <span ng-if="( !$first && !$last )">_</span>
+        <span ng-if="( $last )">{{ round.clues.lastLetter }}</span>
+    </span>
+</h1>
 <p>The name beings with the letter: <strong>{{ round.clues.firstLetter }}</strong></p>
 <p>The number of letters that the word has is: <strong>{{ round.clues.numberOfLetters }}</strong></p>
 <p>The gender of the name is usually: <strong>{{ round.clues.gender }}</strong></p>
 <p>The is most commonly used in: <strong>{{ round.clues.usage }}</strong></p>
 <!-- <h5>You have  seconds remaining to guess!</h5> -->
 <h1>{{ round.countdown }}</h1>
+{{ round.word }}
