start of working scores for game and round

--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
         <script src="scripts/module/guess-game/model/user-list.js"></script>
         <script src="scripts/module/guess-game/model/game.js"></script>
         <script src="scripts/module/guess-game/model/round.js"></script>
+        <script src="scripts/module/guess-game/model/scores.js"></script>
             <!-- Services -->
         <script src="scripts/module/guess-game/srvc/users-online.js"></script>
         <script src="scripts/module/guess-game/srvc/name-request.js"></script>
@@ -69,11 +70,13 @@
         <script src="scripts/module/guess-game/srvc/game-listener.js"></script>
         <script src="scripts/module/guess-game/srvc/current-round.js"></script>
         <script src="scripts/module/guess-game/srvc/round-listener.js"></script>
+        <script src="scripts/module/guess-game/srvc/scores-listener.js"></script>
             <!-- Directives -->
         <script src="scripts/module/guess-game/drctv/user-list/user-list.js"></script>
         <script src="scripts/module/guess-game/drctv/chat/chat.js"></script>
         <script src="scripts/module/guess-game/drctv/game-control/game-control.js"></script>
         <script src="scripts/module/guess-game/drctv/clue/clue.js"></script>
+        <script src="scripts/module/guess-game/drctv/guesser/guesser.js"></script>
         <!-- Routing -->
         <script src="scripts/routing/waiting-room/route.js"></script>
         <script src="scripts/routing/battlefield/route.js"></script>
