--- a/app/scripts/routing/battlefield/tmpl.html
+++ b/app/scripts/routing/battlefield/tmpl.html
@@ -1,3 +1,3 @@
             <!-- <history></history> -->
             <clue></clue>
-            <!-- <guesser></guesser> -->
+            <guesser></guesser>
