reset clears guess'

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/module/guess-game/srvc/current-round.js"></script>
         <script src="scripts/module/guess-game/srvc/round-listener.js"></script>
         <script src="scripts/module/guess-game/srvc/scores-listener.js"></script>
+        <script src="scripts/module/guess-game/srvc/current-scores.js"></script>
             <!-- Directives -->
         <script src="scripts/module/guess-game/drctv/user-list/user-list.js"></script>
         <script src="scripts/module/guess-game/drctv/chat/chat.js"></script>
