--- a/app/scripts/module/guess-game/drctv/guesser/tmpl.html
+++ b/app/scripts/module/guess-game/drctv/guesser/tmpl.html
@@ -26,7 +26,8 @@
     }
 
     .guess-area {
-        min-height: 100px;
+        height: 100px;
+        overflow: scroll;
     }
 
     guesser .guess {
